ghc-4335c07/testsuite/tests/roles/should_fail/Roles8.hs
{-# LANGUAGE RoleAnnotations, GADTs #-}

module Roles8 where

data T1 a = K1 a

type role T1 nominal
type role T1 nominal

data T2 b = MkT2

type role T2 representational
type role T2 phantom